--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,21 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+
+h1{
+  font-size: 4rem;
+  color: black;
+
+}
+h2{
+  font-size: 3rem;
+  color: black;
+
+}
+p{
+  font-size: 1.5rem;
+  color: rgba(19, 18, 18, 0.464);
+
 }
