--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,8 +1,8 @@
 /* src/components/Hero.css */
 .full{
-  max-width: 98%;
+  max-width: 100%;
   height: auto;
-  margin: 0px;
+  /* margin: 0px; */
   background-color: rgb(221, 234, 247);
   padding: 2rem;
   
@@ -87,6 +87,7 @@ img{
   background-color: rgb(9, 113, 224);
   color:white;
   padding:3rem;
+  margin-top: 4rem;
 }
 .heaidng{
   font-size: 2rem;
