--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,17 @@ p{
   color: rgba(19, 18, 18, 0.464);
 
 }
+button{
+  color: black;
+  background-color: white;
+  border: 1px ;
+  border-radius: 10px;
+  /* width: 12vw; */
+  height: 5vh;
+  font-size: 1rem;
+  padding: 1rem 1rem 2rem 1rem;
+}
+button:hover{
+  background-color: rgb(37, 99, 235);
+  color: white;
+}
