--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 #root {
   max-width: 100vw;
   margin: 0 auto;
-  padding: 2rem;
+  
   text-align: center;
+  font-family: sans-serif;
 }
-
+* {
+  transition: all 0.2s ease-in-out;
+}
 /* Custom scrollbar styling */
 ::-webkit-scrollbar {
   width: 8px;
