--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -26,7 +26,7 @@ button{
   background-color: white;
   border: 1px ;
   border-radius: 10px;
-  /* width: 12vw; */
+  width: 12vw;
   height: 5vh;
   font-size: 1rem;
   padding: 1rem 1rem 2rem 1rem;
@@ -98,7 +98,9 @@ img{
   margin-top: 3rem;
   padding: 2rem;
 }
-
+.btnsd{
+  width: 14vw;
+}
 
 
 
