--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -12,8 +12,9 @@
   margin: 2rem;
 }
 .create{
-  color: rgb(37, 99, 235)
-;
+  color: rgb(37, 99, 235);
+  font-size: 3.5rem;
+
 }
 .button{
   display: flex;
