--- a/src/components/CreateAcc.css
+++ b/src/components/CreateAcc.css
@@ -9,16 +9,18 @@
   color: inherit; 
 }
 
-/* body {
+.maincont {
   background-color: #e9f0ff;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-} */
+  
+}
 
 .container {
   text-align: center;
+  /* margin-top: 5vh; */
 }
 
 .logo {
@@ -41,15 +43,22 @@
   max-width: 400px;
   margin: 0 auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  justify-content: center;
 }
 
 .form-box h2 {
   margin-bottom: 10px;
+  display: flex;
+    justify-content: center;
+
 }
 
 .form-box p {
   margin-bottom: 20px;
   color: #666;
+  display: flex;
+    justify-content: center;
+
 }
 
 form input,
@@ -72,23 +81,23 @@ form select {
   flex: 1;
 }
 
-/* button {
+.submit {
   width: 100%;
-  padding: 12px;
-  background-color: #5973bb;
-  color: white;
+  /* padding: auto; */
+  /* background-color: #5973bb; */
+  /* color: white; */
   font-size: 1rem;
   font-weight: 600;
-  border: none;
-  border-radius: 8px;
+  /* border: 1px solid rgb(37, 99, 235); */
+  /* border-radius: 8px; */
   cursor: pointer;
   margin-top: 10px;
   transition: background 0.3s;
 }
 
-button:hover {
-  background-color: #1e4fd1;
-} */
+.submit:hover {
+  background-color: rgb(37, 99, 235);
+}
 
 .signin-text {
   margin-top: 15px;
