--- a/src/components/HomePage/Navbar.css
+++ b/src/components/HomePage/Navbar.css
@@ -57,7 +57,8 @@
 .navbar-right {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
+  /* width: 7rem; */
 }
 
 .icon-button {
@@ -66,6 +67,7 @@
   color: #374151;
   cursor: pointer;
   transition: color 0.3s;
+  
 }
 
 .icon-button:hover {
@@ -83,6 +85,7 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background 0.3s;
+  width: 7vw;
 }
 
 .logout-button:hover {
