--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,8 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+.parent-container{
+  display: flex;
+  height:100vh;
+
+}
