--- a/src/components/ChatBox/ChatWindow.css
+++ b/src/components/ChatBox/ChatWindow.css
@@ -1,4 +1,11 @@
-
+.noopt{
+  display: flex;
+  flex-direction: row;
+  height: 80vh;
+  width: auto;
+  margin-top: 2rem;
+  justify-content: center;
+}
 .chat-window-container {
  width:50%;
  height: 100%;
