--- a/src/components/HomePage/ProjectCard.css
+++ b/src/components/HomePage/ProjectCard.css
@@ -3,6 +3,7 @@
     font-size: 1rem;
 }
 .project-card {
+    margin-top: -30px;
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
@@ -65,12 +66,13 @@
     font-weight: 500;
     font-size: 0.875rem;
     cursor: pointer;
+    border-radius: 30px;
     transition: color 0.2s ease;
 }
 
 .view-button:hover {
     
-    color:#062d99;
+    color:#ffffff;
 }
 
 .project-title {
