--- a/src/components/HomePage/ProjectCard.css
+++ b/src/components/HomePage/ProjectCard.css
@@ -3,7 +3,7 @@
     font-size: 1rem;
 }
 .project-card {
-    margin-top: -30px;
+    margin-top: 2rem;
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
@@ -11,6 +11,7 @@
     padding: 1.5rem;
     transition: box-shadow 0.2s ease;
     width: 60vw;
+    /* margin-bottom : 2rem; */
     
 }
 
