--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -63,6 +63,18 @@
   grid-template-columns: 1fr;
   gap: 2rem;
 }
+.view-all-button {
+  color: #2563eb;
+  background: none;
+  border: none;
+  font-weight: 800;
+  /* font-size: 1.5rem; */
+  cursor: pointer;
+  transition: color 0.2s ease;
+  font-size: 1.5rem;
+  margin-top: 2.5rem;
+}
+
 
 @media (min-width: 1024px) {
   .homepage-grid {
@@ -118,15 +130,6 @@
   margin: 0;
 }
 
-.view-all-button {
-  color: #2563eb;
-  background: none;
-  border: none;
-  font-weight: 500;
-  font-size: 0.875rem;
-  cursor: pointer;
-  transition: color 0.2s ease;
-}
 
 .view-all-button:hover {
   color: #ffffff;
