--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -39,11 +39,11 @@
 
 .create-project-button {
   background-color: #2563eb;
-  width:150px;
+  /* width:150px; */
   color: white;
-  /* padding: 0.75rem 1.5rem; */
-  padding: 2rem;
-  border-radius: 2rem;
+  padding: 0.75rem 1.5rem;
+  /* padding: 2rem; */
+  border-radius: 0.5rem;
   font-weight: 500;
   border: none;
   cursor: pointer;
@@ -234,6 +234,7 @@
   flex: 1; /* Makes each button take equal available width */
   padding: 10px 20px; /* Adjust padding as needed */
   border: none; /* Remove any default button borders */
+  outline:none;
   background-color: transparent; /* Default transparent background */
   cursor: pointer;
   font-size: 16px;
@@ -257,6 +258,8 @@
   background-color: #ffffff; /* Solid white background for active tab */
   color: #000000; /* Black text color for active tab (adjust if your design is different) */
   font-weight: 600; /* Bolder text for active tab */
+  border:none;
+  outline:none;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06); /* Subtle shadow for active tab */
   /* Remove ::after pseudo-element styling here */
 }
