--- a/src/components/createpost.css
+++ b/src/components/createpost.css
@@ -17,6 +17,7 @@ header {
   padding: 16px 40px;
   background-color: white;
   border-bottom: 1px solid #e0e0e0;
+}
 
 .nav-left,
 .nav-right {
@@ -50,7 +51,7 @@ header {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.03);
   margin-bottom: 30px;
-
+}
 
 .section h2 {
   font-size: 2rem;
