--- a/src/components/HomePage/ProjectCard.css
+++ b/src/components/HomePage/ProjectCard.css
@@ -10,8 +10,8 @@
     border: 1px solid #d4dcec;
     padding: 1.5rem;
     transition: box-shadow 0.2s ease;
-    width: 50vw;
-    /* margin-bottom : 2rem; */
+    width: 55vw;
+    margin-bottom : -1rem;
     
 }
 
