--- a/src/team.css
+++ b/src/team.css
@@ -1,36 +1,10 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', sans-serif;
-}
-
-body {
-  background: #f5f6fa;
-  color: #333;
-}
-
-main {
-  display: flex;
-  padding: 2rem;
-}
-
-.checkbox-group {
-  width: 250px;
-  background: white;
-  padding: 1rem;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.05);
-  margin-right: 2rem;
-}
-
-.checkbox-group label {
-  display: block;
-  margin: 1rem 0 0.5rem;
-}
 
 .teammates {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4rem;
 }
 
 .teammates h2 {
@@ -45,21 +19,26 @@ main {
   margin-bottom: 1rem;
 }
 
-.cards {
+.cardsrr {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.card {
+.carduu {
   background: white;
   padding: 1rem;
   border-radius: 12px;
   box-shadow: 0 0 8px rgba(0,0,0,0.05);
+  width: 60vw;
+  box-shadow: 0 0 15px 4px rgba(147, 191, 236, 0.7);
+  transform: translateY(-2px);
+  padding: 2rem;
 }
 
-.card-header {
+.card-headerrr {
   display: flex;
+      justify-content: flex-start;
   gap: 1rem;
   margin-bottom: 0.5rem;
 }
@@ -69,7 +48,9 @@ main {
   height: 60px;
   border-radius: 50%;
 }
-
+.subtext{
+  margin-bottom: 5vh;
+}
 .verified {
   color: #0a84ff;
 }
@@ -92,7 +73,7 @@ main {
   justify-content: space-between;
   margin-top: 1rem;
   align-items: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 1rem;
 }
 
