--- a/src/components/ChatBox/ChatWindow.css
+++ b/src/components/ChatBox/ChatWindow.css
@@ -1,3 +1,9 @@
+.comsoon{
+    font-size: 10rem;
+    margin-top:12vw;
+    color:rgba(0, 0, 0, 0.377);
+}
+
 /* General Layout */
 .noopt {
     display: flex;
