--- a/src/Profile/profile.css
+++ b/src/Profile/profile.css
@@ -183,3 +183,28 @@ body {
   height: 40px;
   border-radius: 50%;
 }
+.avatar-placeholder {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #4a90e2;
+  color: white;
+  font-weight: bold;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reviewer-placeholder {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #888;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
