--- a/src/team.css
+++ b/src/team.css
@@ -89,3 +89,13 @@
   background: #0056ff;
   color: white;
 }
+
+.author-avatar{
+ padding:1.5rem;
+ 
+}
+
+.avatar-placeholder{
+  padding:1.5rem;
+
+}
