--- a/src/components/HomePage/ProjectCard.css
+++ b/src/components/HomePage/ProjectCard.css
@@ -2,20 +2,20 @@
 *{
     font-size: 1rem;
 }
-.project-card {
+.projecct-card {
     margin-top: 2rem;
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
     border: 1px solid #d4dcec;
-    padding: 1.5rem;
+    padding: 3rem;
     transition: box-shadow 0.2s ease;
     width: 55vw;
     margin-bottom : -1rem;
     
 }
 
-.project-card:hover {
+.projecct-card:hover {
     box-shadow: 0 0 15px 4px rgba(147, 191, 236, 0.7);
   transform: translateY(-2px);
 
