--- a/src/components/HomePage/TeamInvitationCard.css
+++ b/src/components/HomePage/TeamInvitationCard.css
@@ -1,33 +1,40 @@
 /* TeamInvitationCard.css */
-.invitation-card {
+.inviuutation-card {
   background-color: white;
   border-radius: 0.5rem;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   border: 1px solid #e5e7eb;
-  padding: 1rem;
+  padding: 3rem;
   transition: box-shadow 0.2s ease;
+  width: 30vw;
+  margin-bottom: 2rem;
+
 }
 
-.invitation-card:hover {
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+.inviuutation-card:hover {
+  box-shadow: 0 0 15px 4px rgba(147, 191, 236, 0.7);
+  transform: translateY(-2px);
 }
 
 .invitation-content {
   margin-bottom: 0.75rem;
 }
 
-.invitation-title {
+.invitation-titleee {
   font-weight: 600;
   color: #111827;
   margin-bottom: 0.25rem;
-  font-size: 1rem;
+  font-size: 2rem;
   line-height: 1.4;
+  margin-bottom: 0.5rem;
 }
 
+
 .invitation-details {
-  font-size: 0.875rem;
+  font-size: 1rem;
   color: #4b5563;
-  margin: 0;
+  /* margin: 0; */
+  margin-bottom: 2rem;
 }
 
 .invitation-actions {
@@ -37,9 +44,9 @@
 
 .accept-button, .decline-button {
   flex: 1;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: 500;
   border: none;
   cursor: pointer;
@@ -49,6 +56,8 @@
 .accept-button {
   background-color: #2563eb;
   color: white;
+  width: 50vw;
+
 }
 
 .accept-button:hover {
@@ -58,6 +67,8 @@
 .decline-button {
   background-color: #f3f4f6;
   color: #374151;
+  width: 50vw;
+
 }
 
 .decline-button:hover {
