--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -6,7 +6,7 @@
 
 .homepage-container {
   max-width: 80rem;
-  margin: 0 auto;
+  margin: 0 4rem;
   padding: 2rem 1rem;
 }
 
@@ -99,7 +99,7 @@ margin: 1vw;}
 .stats-grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
+  gap: 3rem;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   margin-bottom: 4rem;
   margin-top: 2rem;
@@ -187,6 +187,7 @@ margin: 1vw;}
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width:20vw;
 }
 
 .view-all-invitati {
