--- a/src/components/HomePage/Navbar.css
+++ b/src/components/HomePage/Navbar.css
@@ -12,15 +12,16 @@
   justify-content:space-between;
   align-items: center;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 4rem;
   width: 100%;
+  gap: 60vw;
   
 }
 
 .navbar-left {
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 3rem;
 }
 .login-button {
   background-color: #2563eb;
@@ -69,7 +70,7 @@
 
 .navbar-links {
   display: flex;
-  gap: 1.8rem;
+  gap: 3rem;
 }
 
 .navbar-links a {
